--- a/css/index.css
+++ b/css/index.css
@@ -316,23 +316,36 @@
 
 /*訂閱電子報*/
 .newsletter {
+    max-width: 1920px;
     display: flex;
-    flex: 1;
+
+}
+
+.newsletter-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.newsletter-img,
+.newsletter-content {
+    width: 50%;
 }
 
 .newsletter-content {
     background-image: url("../img/index/Hero Section2.png");
     background-repeat: no-repeat;
-    width: 100%;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding: 172px 80px;
+
 }
 
 .newsletter .card {
     background-color: #FFFFFF;
-    width: 800px;
+    width: 100%;
     padding: 80px;
 }
 
@@ -344,7 +357,8 @@
 .newsletter input {
     background: #F1F1F1;
     padding: 8px 16px;
-    width: 640px;
+    max-width: 640px;
+    width: 100%;
     height: 46px;
     border: none;
 }
@@ -372,7 +386,12 @@
     .newsletter {
         display: flex;
         flex-direction: column;
-        flex: 1;
+
+    }
+
+    .newsletter-img,
+    .newsletter-content {
+        width: 100%;
     }
 
     .newsletter-content {
@@ -425,6 +444,8 @@
     text-decoration: underline;
 }
 
+
+
 @media screen and (max-width:768px) {
     .address {
         max-width: 100%;
@@ -433,17 +454,27 @@
     }
 
 
+    .address li {
+        flex-direction: row;
+        padding: 16px 0;
+    }
+
     .item {
         display: flex;
-        flex-direction: column;
-        justify-content: start;
-        align-items: start;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        gap: 12px;
     }
 
-
-    .text>div {
+    .address .text {
         display: flex;
         flex-direction: column;
+        align-items: flex-start;
+        gap: 4px;
     }
+
+
+
 
 }
