--- a/css/layout.css
+++ b/css/layout.css
@@ -2,6 +2,7 @@
 .container {
     max-width: 1920px;
     margin: 0 auto;
+    width: 100%;
 }
 
 .border-b-hr {
@@ -33,6 +34,16 @@ nav ul a:hover {
     flex: 1;
 }
 
+.header-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.header-img,
+.header-content {
+    width: 50%;
+}
 
 .header-content {
     background-image: url("../img/index/Hero Section2.png");
@@ -42,6 +53,7 @@ nav ul a:hover {
     flex-direction: column;
     justify-content: center;
     padding-left: 80px;
+    flex: 1 1 50%;
 }
 
 @media screen and (max-width:768px) {
@@ -53,6 +65,11 @@ nav ul a:hover {
         display: flex;
         flex-direction: column;
         flex: 1;
+    }
+
+    .header-img,
+    .header-content {
+        width: 100%;
     }
 
     .header-content {
@@ -115,7 +132,6 @@ nav ul a:hover {
     border-radius: 6px;
     color: #4B4B4B;
     display: inline-flex;
-    /* 讓文字與圖示可置中 */
     align-items: center;
     justify-content: center;
     height: 30px;
