--- a/css/index.css
+++ b/css/index.css
@@ -2,13 +2,19 @@
 .about {
     display: flex;
     justify-content: end;
+
+
+
 }
 
 .about__desc {
+    max-width: 1077px;
+    width: 100%;
     margin-top: -220px;
     margin-right: 80px;
+    margin-left: 763px;
     background: #FFFFFF;
-    width: 1077px;
+    width: 100%;
     padding: 80px 40px;
     position: relative;
 }
@@ -24,12 +30,13 @@
     .about {
         display: flex;
         justify-content: center;
-        margin: 0 12px;
+
     }
 
     .about__desc {
         margin: 0;
         width: 351px;
+        margin: 0 12px;
         padding: 40px 24px;
     }
 }
@@ -453,28 +460,17 @@
         padding: 64px 12px;
     }
 
-
-    .address li {
-        flex-direction: row;
-        padding: 16px 0;
-    }
-
     .item {
         display: flex;
         justify-content: space-between;
         align-items: center;
         width: 100%;
-        gap: 12px;
     }
 
-    .address .text {
+
+    .text>div {
         display: flex;
         flex-direction: column;
-        align-items: flex-start;
-        gap: 4px;
     }
-
-
-
 
 }
