--- a/css/index.css
+++ b/css/index.css
@@ -11,9 +11,10 @@
     max-width: 1077px;
     margin-top: -11%;
     width: 100%;
-    margin-right: 5%;
+    margin-right: 2%;
+    margin-left: 38%;
     background: #FFFFFF;
-    padding: 4% 2.5%;
+    padding: 3% 2%;
     position: relative;
 }
 
