--- a/css/layout.css
+++ b/css/layout.css
@@ -52,7 +52,7 @@ nav ul a:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding-left: 80px;
+    padding-left: 3.5%;
     flex: 1;
 }
 
