--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,21 @@
 /*自我介紹*/
 .about {
-    display: flex;
+    max-width: 1077px;
+    position: relative;
+    z-index: 1;
+    margin-left: 40%;
+    margin-right: 2%;
+    margin-top: -11%;
+    margin-bottom: 8%;
 }
 
 .about__desc {
     display: flex;
     justify-content: center;
-    max-width: 1077px;
-    margin-top: -11%;
     width: 100%;
-    margin-left: 39%;
-    margin-right: 1.5%;
     background: #FFFFFF;
-    padding: 3% 2%;
-    position: relative;
+    padding: 3% 2.5%;
+
 }
 
 .about__desc_content {
@@ -25,15 +27,18 @@
 
 @media screen and (max-width: 768px) {
     .about {
-        display: flex;
-        justify-content: center;
+        width: 100%;
+        z-index: 1;
+        margin-left: 0;
+        margin-right: 0;
+        margin-top: -50%;
+        padding: 0 12px;
+        padding-top: 6%;
 
     }
 
     .about__desc {
-        margin: 0;
-        width: 351px;
-        margin: 0 12px;
+
         padding: 40px 24px;
     }
 }
@@ -428,6 +433,11 @@
     border-bottom: 1px solid black;
     padding: 16px;
     color: #000000;
+    transition: transform 0.3s ease;
+}
+
+.address li:hover {
+    transform: translate(20px, 0px);
 }
 
 .item {
@@ -457,10 +467,15 @@
         padding: 64px 12px;
     }
 
+    .address li {
+        padding: 16px 0;
+    }
+
     .item {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
         width: 100%;
     }
 
