--- a/css/index.css
+++ b/css/index.css
@@ -71,7 +71,23 @@
     display: block;
     background-color: #0027D5;
     margin-bottom: 18.75px;
+
+}
+
+.service_content .card-title {
+    position: relative;
+    padding-top: 20px;
+}
+
+.service_content .card-title::before {
+    content: "";
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 30px;
+    height: 2.5px;
     border-radius: 50px;
+    background-color: #0027D5;
 }
 
 .service_content_text {
