--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
-    color: #4B4B4B;
     background-color: #FBFBFB;
     line-height: 1.5;
     font-family: "Noto Sans TC", "Noto Sans", sans-serif;
@@ -18,8 +17,8 @@ a {
     color: #0027D5;
 }
 
-.black {
-    color: black;
+.grey {
+    color: #4B4B4B;
 }
 
 .fs-1 {
@@ -61,9 +60,14 @@ a {
 .index-title {
     font-size: 64px;
     margin-bottom: 24px;
-    color: black;
     font-weight: 700;
 }
+
+.mb-24 {
+    margin-bottom: 24px;
+}
+
+
 
 @media screen and (max-width: 768px) {
     .index-title {
