--- a/css/article.css
+++ b/css/article.css
@@ -50,7 +50,7 @@
     color: #3b5fff;
 }
 
-.li-decimal {
+.li-disc {
     list-style: disc;
     padding-left: 1.2em;
 }
@@ -60,6 +60,30 @@
     padding: 24px;
     border-radius: 24px;
 }
+
+.related-articles {
+    margin: 48px 0;
+}
+
+.post-navigation {
+    max-width: 636px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.page-navigation-btn {
+    border: 1px solid black;
+    padding: 8px 16px;
+    border-radius: 40px;
+    display: inline-flex;
+    align-items: center;
+}
+
+.page-navigation-btn:hover {
+    background-color: black;
+    color: white;
+}
+
 
 @media screen and (max-width: 768px) {
 
