--- a/css/layout.css
+++ b/css/layout.css
@@ -72,7 +72,10 @@ nav ul a:hover {
         flex-direction: column;
         padding: 24px;
         padding-bottom: 200px;
+    }
 
+    .blog-header {
+        padding-bottom: 0px;
     }
 
     .fs-6 {
