--- a/css/index.css
+++ b/css/index.css
@@ -497,6 +497,7 @@
 
 @media screen and (max-width:768px) {
     .newsletter {
+        max-width:100%;
         display: flex;
         flex-direction: column;
 
@@ -512,7 +513,7 @@
         padding: 12px;
     }
 
-    .newsletter .card {
+    .newsletter-card {
         width: 100%;
         padding: 40px 24px;
     }
