--- a/css/index.css
+++ b/css/index.css
@@ -220,12 +220,17 @@
     justify-content: center;
     overflow: hidden;
   }
+  .swiper-button-prev {
+    left: 0; 
+  }
+  
  
   @media screen and (max-width: 768px) {
     .index-blog {
         max-width: 100%;
         margin: 64px auto;
         margin-bottom: 140px;
+        padding: 0 12px;
     }
     
     .index-blog-title{
@@ -251,7 +256,7 @@
 
       .swiper-button-prev {
         left: auto;
-        right: 18%;
+        right: 20%;
       }
 
   }
