--- a/css/blog.css
+++ b/css/blog.css
@@ -4,6 +4,13 @@
     margin: 80px auto;
 }
 
+@media screen and (max-width:768px) {
+    .blog-content {
+        max-width: 100%;
+        padding: 0 12px;
+    }
+}
+
 .search-box {
     width: 416px;
     background-image: url("../img/icon/Vector.png");
@@ -35,19 +42,21 @@
     gap: 80px 24px;
 }
 
-.card-content {
-    margin: 16px 0;
-}
 
 .card li {
     flex: 1 1 calc((100% - 48px) / 3);
     max-width: calc((100% - 48px) / 3);
 }
-.card img{
+
+.card-content {
+    margin: 16px 0;
+}
+
+.card img {
     width: 100%;
     height: 200px;
     object-fit: cover;
-  }
+}
 
 .date {
     margin-bottom: 4px;
@@ -109,16 +118,9 @@
 }
 
 @media screen and (max-width:768px) {
-    .card-content {
-        width: 100%;
-        padding: 0 12px;
+    .card {
+        gap: 40px 12px;
     }
-
-    .card{
-        gap: 40px 0;
-
-    }
-
     .card li {
         flex: 0 0 100%;
         max-width: 100%;
