--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,6 @@
 /*網頁外框*/
 .container {
-    max-width: 1920px;
     margin: 0 auto;
-    width: 100%;
 }
 
 /*導覽列*/
@@ -23,105 +21,125 @@ nav ul a:hover {
 
 /*刊頭*/
 .header {
+    width: 100%;
+}
+
+.header-warp{
     display: flex;
     flex: 1;
+    justify-content: center;
 }
 
-.header-img img {
+
+.header-img{
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.header-img,
-.header-content {
-    width: 50%;
+    max-width: 960px;
+    height: 834px;
+    background-image: url("../img/index/Hero Section.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    flex-grow: 1;
 }
 
 .header-content {
     background-image: url("../img/index/Hero Section2.png");
     background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
+    max-width: 960px;
+    flex-grow: 1;
+}
+.header-text{
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    padding-left: 3.5%;
-    flex: 1;
+    align-items: flex-start;
+    flex-direction: column;
+    padding-left: 80px;
 }
 
-@media screen and (max-width:768px) {
-    .container {
-        max-width: 100%;
-    }
 
-    .header {
+@media screen and (max-width:1024px) {
+
+    .header-warp{
         display: flex;
         flex-direction: column;
         flex: 1;
     }
-
-    .header-img,
+    .header-img{
+        max-width: 100%;
+        max-height: 375px;
+    }
+    
     .header-content {
-        width: 100%;
+        max-width: 100%;
+       padding: 24px 24px 200px 24px;
     }
-
-    .header-content {
-        flex-direction: column;
-        padding: 24px;
-    }
-
-    .header-bg-pb {
-        padding-bottom: 200px;
+    .header-text{
+        align-items: center;
+        padding-left: 0;
     }
 
 
-    .header-title {
-        margin-bottom: 12px;
-    }
 }
 
 /*banner區塊*/
 .banner {
+  width: 100%;
+}
+.banner-warp{
     display: flex;
+    justify-content: center;
     flex: 1;
+    gap: 12px;
+
 }
 
-.banner-img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.banner-img {
+    height: 640px;
+    max-width: 948px;
+    background-image: url("../img/blog/About Section.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 50%;
+    flex-grow: 1;
 }
+
 
 .banner-content {
     display: flex;
+    height: 640px;
     flex-direction: column;
     justify-content: center;
     padding-left: 24px;
-    width: 636px;
-}
-
-.banner-img,
-.banner-content {
+    max-width: 948px;
     width: 50%;
-
+    flex-grow: 1;
 }
+
 
 
 @media screen and (max-width:768px) {
-    .banner {
+    .banner-warp{
         flex-direction: column;
+        flex: 1;
     }
-
-    .banner-img,
+    .banner-img {
+        max-width: 100%;
+        max-height: 375px;
+        width: 100%;
+    }
+    
+    
     .banner-content {
+        max-height: 375px;
+        max-width: 100%;
         width: 100%;
 
     }
 
-    .banner-content {
-        width: 100%;
-        padding: 48px 12px;
-    }
+
 }
 
 
