--- a/css/base.css
+++ b/css/base.css
@@ -84,7 +84,9 @@ a {
     margin-bottom: 24px;
 }
 
-
+.mb-12 {
+    margin-bottom: 12px;
+}
 
 
 
@@ -98,6 +100,7 @@ a {
     .fs-32 {
         font-size: 24px;
     }
+
     .fs-120 {
         font-size: 52px;
     }
