--- a/css/index.css
+++ b/css/index.css
@@ -1,21 +1,17 @@
 /*自我介紹*/
 .about {
     display: flex;
-    justify-content: center;
-    padding-right: 80px;
-    margin-top: -140px;
+    justify-content: end;
+    padding-right: 4.17vw;
+    margin-top: -160px;
 }
 
 .about__desc {
     display: flex;
     justify-content: center;
-    width: 100%;
-    max-width: 1077px;
+    width: 56%;
     background: #FFFFFF;
     padding: 80px 40px;
-    margin-left: 350px;
-
-
 }
 
 .about__desc_content {
@@ -27,12 +23,13 @@
 
 @media screen and (max-width: 1024px) {
     .about {
-        padding: 0 30px;
+        padding: 0 12px;
         margin: 0;
+        margin-bottom: 20px;
     }
 
     .about__desc {
-        max-width: 100%;
+        width: 100%;
         padding: 40px 24px;
         margin-left: 0;
         margin-top: -160px;
@@ -51,10 +48,13 @@
 }
 
 /*服務內容*/
+.service-warp {
+    margin: 80px auto;
+}
 
 .service {
+    margin: 0 auto;
     max-width: 1296px;
-    margin: 80px auto;
     display: flex;
     flex-direction: column;
     gap: 64px
@@ -125,10 +125,15 @@
 
 .cta:hover {
     color: #0027D5;
-    transform: translate(6px, 5px);
+    transform: translate(20px, 0px);
 }
 
+
 @media screen and (max-width: 768px) {
+    .service-warp {
+        margin: 64px 0;
+    }
+
     .service {
         max-width: 100%;
         margin: 0 12px;
@@ -451,9 +456,8 @@
 
 
 .newsletter-img {
-    width: 100%;
-    max-width: 960px;
-    height: 834px;
+    width: 50%;
+    height: 100vh;
     background-image: url("../img/index/Hero Section.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -471,10 +475,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
-    height: 834px;
+    width: 50%;
+    height: 100vh;
     padding: 0 80px;
-    max-width: 960px;
     flex-grow: 1;
 
 }
