--- a/css/layout.css
+++ b/css/layout.css
@@ -9,6 +9,7 @@ nav ul {
     justify-content: center;
     padding: 24px 80px;
     gap: 0 40px;
+
 }
 
 nav ul a {
@@ -22,6 +23,8 @@ nav ul a:hover {
 /*刊頭*/
 .header {
     width: 100%;
+    height: calc(100vh - 90px);
+
 }
 
 .header-warp {
@@ -32,23 +35,21 @@ nav ul a:hover {
 
 
 .header-img {
-    width: 100%;
-    max-width: 960px;
-    height: 834px;
+    width: 50%;
     background-image: url("../img/index/Hero Section.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    flex-grow: 1;
+    height: 834px;
+
 }
 
 .header-content {
     background-image: url("../img/index/Hero Section2.png");
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
-    max-width: 960px;
-    flex-grow: 1;
+    width: 50%;
+    height: 834px;
 }
 
 .header-text {
@@ -61,6 +62,11 @@ nav ul a:hover {
 
 
 @media screen and (max-width:1024px) {
+    .header {
+        width: 100%;
+        height: 100%;
+
+    }
 
     .header-warp {
         display: flex;
@@ -69,13 +75,14 @@ nav ul a:hover {
     }
 
     .header-img {
-        max-width: 100%;
+        width: 100%;
         max-height: 375px;
     }
 
     .header-content {
-        max-width: 100%;
+        width: 100%;
         padding: 24px 24px 200px 24px;
+        max-height: 375px;
     }
 
     .header-text {
@@ -89,6 +96,7 @@ nav ul a:hover {
 /*banner區塊*/
 .banner {
     width: 100%;
+    height: 100vh;
 }
 
 .banner-warp {
@@ -100,8 +108,7 @@ nav ul a:hover {
 }
 
 .banner-img {
-    height: 640px;
-    max-width: 948px;
+    height: 100vh;
     background-image: url("../img/blog/About Section.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -113,37 +120,49 @@ nav ul a:hover {
 
 .banner-content {
     display: flex;
-    height: 640px;
+    height: 100vh;
     flex-direction: column;
     justify-content: center;
     padding-left: 24px;
-    max-width: 948px;
     width: 50%;
     flex-grow: 1;
+}
+
+.banner-content-text {
+    width: 67%;
 }
 
 
 
 @media screen and (max-width:768px) {
+    .banner {
+        height: 100%;
+    }
+
     .banner-warp {
         flex-direction: column;
         flex: 1;
-        padding: 0 12px;
+
     }
 
     .banner-img {
         max-width: 100%;
-        max-height: 375px;
+        height: 375px;
         width: 100%;
     }
 
 
     .banner-content {
-        max-height: 375px;
+        height: auto;
         max-width: 100%;
-        padding-left: 0;
         width: 100%;
+        padding-left: 0px;
 
+    }
+
+    .banner-content-text {
+        width: 100%;
+        padding: 0 12px;
     }
 
 
