--- a/css/article.css
+++ b/css/article.css
@@ -24,8 +24,6 @@
 }
 
 
-
-
 .blog-content-item .title {
     margin-bottom: 12px;
 }
@@ -37,6 +35,13 @@
 .blog-content-item ol {
     list-style: decimal;
     padding-left: 1.2em;
+}
+
+@media screen and (max-width: 768px) {
+    .blog-content-item ol {
+        list-style: decimal;
+        padding-left: 1em;
+    }
 }
 
 .blog-content-article a {
@@ -51,6 +56,14 @@
 .li-disc {
     list-style: disc;
     padding-left: 1.2em;
+}
+
+@media screen and (max-width: 768px) {
+
+    .li-disc {
+        list-style: disc;
+        padding-left: 1em;
+    }
 }
 
 .summary {
