--- a/css/layout.css
+++ b/css/layout.css
@@ -162,7 +162,7 @@ nav ul a:hover {
 
     .banner-content-text {
         width: 100%;
-        padding: 0 12px;
+        padding: 48px 12px;
     }
 
 
