--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@
     .about {
         padding: 0 12px;
         margin: 0;
-        margin-bottom: 20px;
+        margin-top: 20px;
     }
 
     .about__desc {
