--- a/css/blog.css
+++ b/css/blog.css
@@ -1,34 +1,20 @@
-.blog .header {
-    width: 100%;
-    height: calc(100vh - 90px);
-}
+@media screen and (max-width:1024px) {
+    .blog .header-content {
+        padding: 24px;
 
-.blog .header-img {
-    height: calc(100vh - 90px);
-}
+    }
 
-.blog .header-content {
-    height: calc(100vh - 90px);
+    .blog .header-text {
+        align-items: center;
+    }
 }
-
 
 @media screen and (max-width:768px) {
-
-    .blog .header-img {
-        height: 375px;
-    }
-
-    .blog .header-content {
-        max-width: 100%;
-        padding: 24px;
-        height: 180px;
-    }
 
     .blog .header-text {
         align-items: flex-start;
     }
 }
-
 
 
 /*搜尋*/
