--- a/css/layout.css
+++ b/css/layout.css
@@ -30,8 +30,8 @@ nav ul a:hover {
     display: flex;
     flex: 1;
     justify-content: center;
+    height: calc(100vh - 90px);
 }
-
 
 .header-img {
     width: 50%;
@@ -39,8 +39,6 @@ nav ul a:hover {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 834px;
-
 }
 
 .header-content {
@@ -48,7 +46,6 @@ nav ul a:hover {
     background-repeat: no-repeat;
     background-size: cover;
     width: 50%;
-    height: 834px;
 }
 
 .header-text {
@@ -71,17 +68,18 @@ nav ul a:hover {
         display: flex;
         flex-direction: column;
         flex: 1;
+        height: auto;
     }
 
     .header-img {
         width: 100%;
-        max-height: 375px;
+        height: calc(100vh - 90px - 180px);
     }
 
     .header-content {
         width: 100%;
         padding: 24px 24px 200px 24px;
-        max-height: 375px;
+        height: auto;
     }
 
     .header-text {
@@ -95,7 +93,7 @@ nav ul a:hover {
 /*banner區塊*/
 .banner {
     width: 100%;
-    height: 100vh;
+
 }
 
 .banner-warp {
@@ -103,11 +101,11 @@ nav ul a:hover {
     justify-content: center;
     flex: 1;
     gap: 12px;
+    height: calc(100vh - 90px);
 
 }
 
 .banner-img {
-    height: 100vh;
     background-image: url("../img/blog/About Section.png");
     background-repeat: no-repeat;
     background-size: cover;
@@ -119,12 +117,12 @@ nav ul a:hover {
 
 .banner-content {
     display: flex;
-    height: 100vh;
     flex-direction: column;
     justify-content: center;
     padding-left: 24px;
     width: 50%;
     flex-grow: 1;
+
 }
 
 .banner-content-text {
@@ -141,12 +139,13 @@ nav ul a:hover {
     .banner-warp {
         flex-direction: column;
         flex: 1;
+        height: auto;
 
     }
 
     .banner-img {
         max-width: 100%;
-        height: 375px;
+        height: calc(100vh - 90px - 180px);
         width: 100%;
     }
 
