--- a/css/layout.css
+++ b/css/layout.css
@@ -131,7 +131,7 @@ nav ul a:hover {
 
 
 
-@media screen and (max-width:768px) {
+@media screen and (max-width:1024px) {
     .banner {
         height: 100%;
     }
@@ -176,12 +176,13 @@ nav ul a:hover {
     flex: 1;
     max-width: 1296px;
     margin: 80px auto;
+    padding: 0 12px;
 }
 
 .mail {
     font-size: clamp(1rem, 6vw, 2rem);
     width: 100%;
-    flex: 1;
+
 }
 
 
@@ -191,6 +192,7 @@ nav ul a:hover {
 
 .social {
     display: flex;
+    justify-content: space-between;
     max-width: 236px;
     width: 100%;
 }
