--- a/css/blog.css
+++ b/css/blog.css
@@ -51,11 +51,10 @@
     border-color: #0027d5;
 }
 
-
-
-@media screen and (max-width:768px) {
+@media screen and (max-width:1024px) {
     .blog-content {
         max-width: 100%;
+        margin: 80px 0;
         padding: 0 12px;
     }
 
@@ -63,6 +62,8 @@
         width: 351px;
     }
 }
+
+
 
 
 
@@ -150,6 +151,23 @@
     color: #fff;
     margin-left: 8px;
     text-align: center;
+}
+
+@media screen and (max-width:1024px) {
+    .card {
+        display: flex;
+        justify-content: space-between;
+        margin: 40px auto;
+        gap: 80px 24px;
+
+    }
+
+    .card li {
+        flex: 1 1 calc((100% - 48px) / 2);
+        max-width: calc((100% - 48px) / 2);
+    }
+
+
 }
 
 @media screen and (max-width:768px) {
