--- a/css/index.css
+++ b/css/index.css
@@ -52,6 +52,11 @@
     margin: 80px auto;
 }
 
+.service_img {
+    object-fit: cover;
+    width: 50vw;
+}
+
 .service {
     margin: 0 auto;
     max-width: 1296px;
@@ -91,7 +96,7 @@
 .service_content_text {
     margin-left: -40px;
     background: #FFFFFF;
-    width: 480px;
+    width: 50vw;
     padding: 24px;
     text-align: justify;
 }
@@ -261,8 +266,7 @@
     left: 0;
 }
 
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
     .index-blog {
         max-width: 100%;
         margin: 64px auto;
@@ -284,7 +288,7 @@
         top: 100%;
         width: 44px;
         height: 44px;
-        margin-top: 12%;
+        margin-top: 8%;
     }
 
 
@@ -295,6 +299,21 @@
 
     .swiper-button-prev {
         left: auto;
+        right: 10%;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+
+
+
+    .swiper-button-prev,
+    .swiper-button-next {
+        margin-top: 12%;
+    }
+
+    .swiper-button-prev {
         right: 20%;
     }
 
