訂閱電子報更新

--- a/css/base.css
+++ b/css/base.css
@@ -44,7 +44,8 @@ a {
 }
 
 .fs-120 {
-    font-size: 120px;
+    font-size: calc(14px + (106 * ((100vw - 320px) / 1600)));
+
 }
 
 .fs-64 {
@@ -88,15 +89,7 @@ a {
     margin-bottom: 12px;
 }
 
-@media screen and (max-width: 1024px) {
-    .fs-120 {
-        font-size: 100px;
-    }
 
-    .about-desc-fs p {
-        font-size: 24px;
-    }
-}
 
 @media screen and (max-width: 768px) {
 
@@ -117,4 +110,7 @@ a {
         font-size: 24px;
     }
 
+    .about-desc-fs p {
+        font-size: 24px;
+    }
 }
