--- a/css/base.css
+++ b/css/base.css
@@ -89,7 +89,11 @@ a {
     margin-bottom: 12px;
 }
 
-
+@media screen and (max-width: 1024px) {
+    .fs-120 {
+        font-size: 100px;
+    }
+}
 
 @media screen and (max-width: 768px) {
 
